--- a/webApp/src/userAuth/login.css
+++ b/webApp/src/userAuth/login.css
@@ -1,44 +1,41 @@
-@import url('https://fonts.googleapis.com/css2?family=Lexend+Zetta:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lexend+Zetta:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-*{
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background-color: #ECDFCC; /* Fallback color */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background: url('../assets/naruto.jpg') no-repeat center center; /* Ensure image is centered */
-    background-size: cover; /* Make the image cover the entire area */
+  background-color: #ecdfcc; /* Fallback color */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: #fff;
 }
-
 
 .wrapper {
-    width: 400px;
-    background: rgba(255, 255, 255, 0.1); /* Semi-transparent background */
-    padding: 20px;
-    border: 2px solid #ccc;
-    border-radius: 10px;
-    backdrop-filter: blur(20px); /* Blur effect */
-    -webkit-backdrop-filter: blur(20px); /* Safari support */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Subtle shadow */
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  width: 400px;
+  background: rgba(255, 255, 255, 0.1); /* Semi-transparent background */
+  padding: 20px;
+  border: 2px solid #ccc;
+  border-radius: 10px;
+  background: linear-gradient(180deg, #da1212, #161e54, #161e54, #161e54);
+  backdrop-filter: blur(20px); /* Blur effect */
+  -webkit-backdrop-filter: blur(20px); /* Safari support */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Subtle shadow */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-
-.wrapper h3{
-    text-align: center;
-    margin-bottom: 20px;
-    color: black;
-    font-size: 24px;
-    font-weight: 900;
-    font-family: 'Lexend Zetta', serif;
+.wrapper h3 {
+  text-align: center;
+  margin-bottom: 20px;
+  color: white;
+  font-size: 24px;
+  font-weight: 900;
+  font-family: "Poppins", sans-serif;
 }
-
